sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: ')' expected but 'for' found.
  	 for(i<-fin to debut by -1){
         ^